<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Gender_selection">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="35dp"
        android:text="@string/genderText"
        android:textColor="@color/textColor"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/femaleGender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="37dp"
        android:background="@color/colorPrimary"
        android:text="@string/maleGender"
        android:textColor="@color/textColor"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/otherGender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/femaleGender"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="37dp"
        android:background="@color/colorPrimary"
        android:text="@string/femaleGender"
        android:textColor="@color/textColor"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/otherGender"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="131dp"
        android:background="@color/colorPrimary"
        android:text="@string/otherGender"
        android:textColor="@color/textColor"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="37dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/genero" />

</androidx.constraintlayout.widget.ConstraintLayout>