<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainMenu">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="408dp"
        android:layout_height="249dp"
        android:layout_marginEnd="3dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/quedateencasa2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/seResponsable"
            android:textColor="@color/textColor"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/quedateencasa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/stayHome"
            android:textColor="@color/textColor"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/txtGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/contadorGeneral"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/contGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/txtCiudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/contadorCiudad"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/contCiudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:textSize="36sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="415dp"
        android:layout_height="449dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageButton
            android:id="@+id/btnClap"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="15dp"
            android:adjustViewBounds="true"
            android:background="@color/colorPrimaryDark"
            android:padding="30dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/btnMap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/clap_icon" />

        <ImageButton
            android:id="@+id/btnHelp"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="15dp"
            android:adjustViewBounds="true"
            android:background="@color/colorPrimaryDark"
            android:padding="30dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/tvhelp"
            app:layout_constraintEnd_toStartOf="@+id/btnProf"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@mipmap/informacion" />

        <ImageButton
            android:id="@+id/btnProf"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="25dp"
            android:adjustViewBounds="true"
            android:background="@color/colorPrimaryDark"
            android:padding="30dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/tvhelp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnHelp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:srcCompat="@mipmap/user" />

        <TextView
            android:id="@+id/tvhelp"
            android:layout_width="121dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:capitalize="none"
            android:gravity="center"
            android:text="@string/menuAyuda"
            android:textColor="@color/textColor"
            app:layout_constraintEnd_toStartOf="@+id/tvPerfil"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnHelp" />

        <TextView
            android:id="@+id/tvPerfil"
            android:layout_width="121dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:capitalize="none"
            android:gravity="center"
            android:text="@string/menuPerfil"
            android:textColor="@color/textColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvhelp"
            app:layout_constraintTop_toBottomOf="@+id/btnProf" />

        <ImageButton
            android:id="@+id/btnMap"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:adjustViewBounds="true"
            android:background="@color/colorPrimaryDark"
            android:padding="30dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnClap"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/location_icon" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="121dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="18dp"
            android:gravity="center"
            android:text="@string/menuMap"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toTopOf="@+id/btnHelp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="121dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="18dp"
            android:capitalize="none"
            android:gravity="center"
            android:text="@string/menuAplausos"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toTopOf="@+id/btnHelp"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnClap" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>