<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backbutton"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:background="@color/colorPrimary"
            android:src="@drawable/abc_vector_test"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="97dp"
            android:layout_marginBottom="24dp"
            android:text="@string/menuPerfil"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backbutton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navbar"
        app:srcCompat="@drawable/user_red" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="5dp"
        android:text="@string/profileActivity"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/nicknametxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <EditText
        android:id="@+id/nicknametxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="9dp"
        android:ems="10"
        android:hint="Nombre usuario"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/saveProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/saveProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimary"
        android:padding="15dp"
        android:text="@string/saveProfile"
        android:textColor="@color/textColor"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/logprof"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nicknametxt" />

    <TextView
        android:id="@+id/logprof"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="188dp"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/politica"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/darker_gray"
        android:padding="15dp"
        android:text="@string/showPrivacy"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logprof" />

    <Button
        android:id="@+id/logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="25dp"
        android:background="@android:color/darker_gray"
        android:padding="15dp"
        android:text="@string/deleteProfile"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logprof"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>