<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create_clap">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navbar"
        android:layout_width="414dp"
        android:layout_height="73dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backbutton"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:background="@color/colorPrimaryDark"
            android:src="@drawable/abc_vector_test"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="97dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/clapviw"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backbutton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="34dp"
        android:gravity="center"
        android:text="@string/cLAPCREATION"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/clapMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navbar" />

    <Button
        android:id="@+id/sendClap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="150dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/sendClapButton"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/clapMessage"
        android:layout_width="match_parent"
        android:layout_height="273dp"
        android:layout_marginBottom="25dp"
        android:background="#92CFCFCF"
        android:backgroundTint="#CFCFCF"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Escribe un mensaje si te apetece, los usuarios podrán verlo en el muro de comentarios"
        android:inputType="textMultiLine"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/sendClap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>